Temporarly prevent wrapping of config controls

--- a/stylesheets/settings.less
+++ b/stylesheets/settings.less
@@ -205,6 +205,13 @@ body .settings-view {
 	}
 
 	.packages {
+
+		.theme-chooser {
+			.col-md-4 {
+				min-width: 300px; // temporarly prevent wrapping
+			}
+		}
+
 		.theme-base-color,
 		.theme-saturation {
 			box-shadow: @theme-config-box-shadow;
